--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Color Changes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
@@ -18,6 +18,7 @@
             <div class="col-sm-3 bg-dark ">
                 <button onclick="danger()" type="button" class="btn btn-danger">danger</button> 
                 <button onclick="success()" type="button" class="btn btn-success">success</button>
+                
             </div>
         </div>
     </div>
